# rust-api-setup

./: .env  Cargo.toml  README.md
migrations/: 20251125132509_create_users.sql
src/: db.rs  main.rs
src/handlers/: auth_handler.rs
src/models/: user.rs
src/routes/: auth_routes.rs
