[package]
name = "rust_setup_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = "1"
dotenv = "0.15"